[ADDED] Added ssh remote exec